...
      return;
    }
    setPage(page + 1);
    fetchQuizzes();
  };
  return (
    <View style={styles.container} testID="quizScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={quizList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
