...
      return;
    }
    setPage(page + 1);
    fetchSchedules();
  };
  return (
    <View style={styles.container} testID="scheduleScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={scheduleList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
